# This file is part of intel-xsave. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-xsave/master/COPYRIGHT. No part of intel-xsave, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of intel-xsave. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-xsave/master/COPYRIGHT.


[package]
name = "x86_64-xsave"
description = "x86_64-xsave"
keywords = ["intel", "x86-64", "x86_64", "xsave", "cpu"]
categories = ["hardware-support"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/intel-xsave"
repository = "https://github.com/lemonrock/intel-xsave.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
edition = '2018'
version = "0.1.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
arrayref = "^0.3.5"
